Use `Locale.of`